--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.3.2",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "firebase": "^12.7.0",
     "firebase-admin": "^13.6.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
     "next": "16.1.1",
+    "papaparse": "^5.5.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
