--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^12.7.0",
     "firebase-admin": "^13.6.0",
     "html2canvas": "^1.4.1",
+    "idb": "^8.0.3",
     "jspdf": "^4.0.0",
     "next": "16.1.1",
     "papaparse": "^5.5.3",
